manifests/apps/flame-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flame-dashboard-service
  namespace: flame-dashboard
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  selector:
    app: flame-dashboard
  ports:
    - port: 80
      targetPort: 5005
  type: ClusterIP
